[package]
name = "fgumi-pipeline-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Typed-step pipeline framework core (steps, queues, reorder stage, scheduler) for fgumi"
repository.workspace = true
license.workspace = true

[dependencies]
ahash = "0.8"
crossbeam-queue = "0.3"
parking_lot = "0.12"
log = "0"
noodles = { version = "0.111.0", features = ["sam"] }

[dev-dependencies]
trybuild = "1.0"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
