[package]
name = "fgumi-raw-bam"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Raw byte-level operations on BAM alignment records"
repository.workspace = true
license.workspace = true

[dependencies]
noodles = { workspace = true, features = ["bam", "sam"], optional = true }
anyhow = { workspace = true, optional = true }

[features]
default = []
noodles = ["dep:noodles", "dep:anyhow"]
test-utils = []

[dev-dependencies]
rstest = { workspace = true }
