[package]
name = "fgumi-raw-bam"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Raw byte-level operations on BAM alignment records"
repository.workspace = true
license.workspace = true

[dependencies]
noodles = { version = "0.106.0", features = ["bam", "bgzf", "core", "csi", "sam"], optional = true }
anyhow = { version = "1.0.102", optional = true }
bytemuck = { workspace = true }
wide = { workspace = true }

[features]
default = []
noodles = ["dep:noodles", "dep:anyhow"]
test-utils = []

[dev-dependencies]
bstr = "1.12.1"
proptest = "1.10"
rstest = "0"
tempfile = "3"
