[package]
name = "fgumi-raw-bam"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Raw byte-level operations on BAM alignment records"
repository.workspace = true
license.workspace = true

[dependencies]
noodles = { workspace = true, features = ["bam", "bgzf", "core", "csi", "sam"], optional = true }
anyhow = { workspace = true, optional = true }
bytemuck = { workspace = true }
fgumi-dna = { workspace = true }
fgumi-tag = { workspace = true }
wide = { workspace = true }

[features]
default = []
noodles = ["dep:noodles", "dep:anyhow"]
test-utils = []

[dev-dependencies]
bstr = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
