[package]
name = "fgumi-sam"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "SAM/BAM record utilities, CIGAR parsing, and read-pair clipping for fgumi"
repository.workspace = true
license.workspace = true

[dependencies]
noodles = { workspace = true, features = ["bam", "sam", "core"] }
fgumi-raw-bam = { workspace = true, features = ["noodles"] }
bstr = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
fgumi-dna = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
fgumi-raw-bam = { workspace = true, features = ["test-utils"] }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
