[package]
name = "fgumi-sam"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "SAM/BAM record utilities, CIGAR parsing, and read-pair clipping for fgumi"
repository.workspace = true
license.workspace = true

[dependencies]
noodles = { version = "0.109.0", features = ["bam", "sam", "core"] }
fgumi-raw-bam = { workspace = true, features = ["noodles"] }
fgumi-tag = { workspace = true }
bstr = "1.12.1"
clap = { version = "4", features = ["derive"] }
log = "0"
anyhow = "1.0"
fgumi-dna = { workspace = true }
tempfile = "3.3.0"

[dev-dependencies]
fgumi-raw-bam = { workspace = true, features = ["test-utils"] }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
