[package]
name = "fgumi-simd-fastq"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "SIMD-accelerated FASTQ parsing using Helicase-style bitmask operations"
repository.workspace = true
license.workspace = true

[dependencies]

[dev-dependencies]
rstest = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
memchr = { workspace = true }
seq_io = { workspace = true }

[[bench]]
name = "fastq_parsing"
harness = false

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
