[package]
name = "fgumi-sort"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "High-performance external merge-sort engine for BAM files"
repository.workspace = true
license.workspace = true
readme = "README.md"
categories = ["command-line-utilities", "science"]
keywords = ["bioinformatics", "bam", "sort", "sequencing", "ngs"]

[lints.clippy]
pedantic = { level = "deny", priority = -1 }

[lints.rust]
# `loom` is a config flag set only for the model-checking test target
# (`tests/loom_merge_slots.rs`, run via `RUSTFLAGS="--cfg loom"`). Declare it so
# the unexpected-cfg lint stays quiet under the normal `-D warnings` build.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[dependencies]
fgumi-raw-bam = { workspace = true, features = ["noodles"] }
fgumi-bgzf = { workspace = true }
fgumi-bam-io = { workspace = true }
noodles = { version = "0.111.0", features = ["bam", "sam", "core", "csi"] }
noodles-bgzf = { version = "0.47.0", features = ["libdeflate"] }
libdeflater = "1.22"
libmimalloc-sys = { version = "0.1.44", features = ["extended"] }
rayon = "1.10"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8.21"
parking_lot = "0.12"
arc-swap = "1"
tempfile = "3.4"
bytemuck = { workspace = true }
ahash = "0.8"
smallvec = "1.15"
anyhow = "1.0.102"
bstr = "1.12.1"
bytes = "1"
bytesize = "2.3"
fs4 = { version = "1.1", default-features = false, features = ["sync"] }
log = "0"
zstd = "0.13"
voracious_radix_sort = { version = "1", features = ["voracious_multithread"] }

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", default-features = false, features = ["fs"] }

[features]
default = []
memory-debug = []
test-utils = []

[dev-dependencies]
fgumi-bam-io = { workspace = true }
fgumi-raw-bam = { workspace = true, features = ["test-utils", "noodles"] }
fgumi-sam = { workspace = true }
rstest = "0"
proptest = "1.10"
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.4"

# loom is only compiled under `--cfg loom`. It is a *regular* (not dev)
# dependency so `merge_slots.rs` itself can swap `std::sync` -> `loom::sync`
# under `#[cfg(loom)]` and have its REAL atomics/locks model-checked by
# `tests/loom_merge_slots.rs` (which drives the real `SortMergeSlot`). The test
# is `#![cfg(loom)]` (empty under a normal build).
# Run with:  RUSTFLAGS="--cfg loom" cargo test -p fgumi-sort --test loom_merge_slots --release
[target.'cfg(loom)'.dependencies]
loom = "0.7"

[[bench]]
name = "chunk_sorter"
harness = false

[[bench]]
name = "queryname_keys"
harness = false
