[package]
name = "fgumi-sort"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "High-performance external merge-sort engine for BAM files"
repository.workspace = true
license.workspace = true
readme = "README.md"
categories = ["command-line-utilities", "science"]
keywords = ["bioinformatics", "bam", "sort", "sequencing", "ngs"]

[lints.clippy]
pedantic = { level = "deny", priority = -1 }

[dependencies]
fgumi-raw-bam = { workspace = true, features = ["noodles"] }
fgumi-bgzf = { workspace = true }
fgumi-bam-io = { workspace = true }
noodles = { workspace = true, features = ["bam", "sam", "core", "csi"] }
noodles-bgzf = { workspace = true }
libdeflater = { workspace = true }
libmimalloc-sys = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-queue = { workspace = true }
crossbeam-utils = { workspace = true }
parking_lot = { workspace = true }
tempfile = { workspace = true }
bytemuck = { workspace = true }
ahash = { workspace = true }
anyhow = { workspace = true }
bstr = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
fs4 = { workspace = true }
log = { workspace = true }
zstd = "0.13"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }

[features]
default = []
memory-debug = []

[dev-dependencies]
fgumi-bam-io = { workspace = true }
fgumi-raw-bam = { workspace = true, features = ["test-utils", "noodles"] }
fgumi-sam = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
