[package]
name = "fgumi-tag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Validated SAM/BAM aux tag identifier (SamTag) for fgumi"
repository.workspace = true
license.workspace = true

[dependencies]
noodles = { workspace = true, features = ["sam"] }
anyhow = { workspace = true }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
