[package]
name = "fgumi-umi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "UMI assignment strategies and utilities for fgumi"
repository.workspace = true
license.workspace = true

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, optional = true }
rayon = { workspace = true }
fgumi-dna = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
proptest = { workspace = true }

[features]
default = ["cli"]
cli = ["dep:clap"]
profile-adjacency = []

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
