[package]
name = "fgumi-umi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "UMI assignment strategies and utilities for fgumi"
repository.workspace = true
license.workspace = true

[dependencies]
ahash = "0.8"
anyhow = "1.0"
clap = { version = "4", features = ["derive"], optional = true }
rayon = "1.12"
fgumi-dna = { workspace = true }

[dev-dependencies]
rstest = "0.26"
proptest = "1"

[features]
default = ["cli"]
cli = ["dep:clap"]
profile-adjacency = []

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
