[package]
name = "fgumi-umi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "UMI assignment strategies and utilities for fgumi"
repository.workspace = true
license.workspace = true

[dependencies]
ahash = "0.8"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
fgumi-dna = { workspace = true }

[dev-dependencies]
rstest = "0.26"
proptest = "1"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
